--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,6 +1,6 @@
--name : Demo  
- hoste : all
- tasks :
-   - name : print hello
+-name: Demo  
+ hosts: all
+ tasks:
+   - name: print hello
      ansible.builtin.debug:
        msg: Hello world
