--- a/02-vars.yml
+++ b/02-vars.yml
@@ -7,3 +7,9 @@
     - name: Access a variable
       ansible.builtin.debug:
          msg: URL == {{URL}}  
+- name: Register a variable
+  hosts: all
+  connection: local
+  tasks:
+    - name: run a shell command
+      ansible.builtin.shell: uptime
