--- a/02-vars.yml
+++ b/02-vars.yml
@@ -13,3 +13,8 @@
   tasks:
     - name: run a shell command
       ansible.builtin.shell: uptime
+      register: out
+    - name: print out
+      ansible.builtin.debug: 
+      msg: "{{out}}"
+
