--- a/02-vars.yml
+++ b/02-vars.yml
@@ -17,4 +17,7 @@
     - name: print out
       ansible.builtin.debug: 
         msg: "{{out.stdout}}"
+    - name: set a fact
+      ansible.builtin.set_fact:
+        OUTPU: "{{out.stdout}}"  
 
