--- a/Roles/Demo/Task/main.yml
+++ b/Roles/Demo/Task/main.yml
@@ -1,3 +1,7 @@
-- name: Print hello
+- name: Print Hello
   ansible.builtin.debug:
-     msg: Hello from role
+    msg: Hello from role
+
+- name: Print URL
+  ansible.builtin.debug:
+    msg: URL == {{URL}}
