--- a/02-vars.yml
+++ b/02-vars.yml
@@ -6,7 +6,21 @@
   tasks:
     - name: Access a variable
       ansible.builtin.debug:
-         msg: URL == {{URL}}  
+         msg: URL == {{URL}} 
+
+ - name: Declare variable at task level
+  hosts: all
+  connection: local
+  tasks:
+    - name: Declare and Access a variable
+      ansible.builtin.debug:
+         msg: URL == {{URL}}     
+      vars: 
+         URL: task.example.com       
+ 
+
+
+
 - name: Register a variable
   hosts: all
   connection: local
