--- a/02-vars.yml
+++ b/02-vars.yml
@@ -11,8 +11,8 @@
 - name: Declare a variable in another file
   hosts: all
   connection: local
-  vars_file: 
-    - vars.yml
+  var_file: 
+    - var.yml
   tasks:
     - name: Access a variable
       ansible.builtin.debug:
