--- a/02-vars.yml
+++ b/02-vars.yml
@@ -11,7 +11,7 @@
 - name: Declare a variable in another file
   hosts: all
   connection: local
-  vars_file: 
+  vars_files: 
      - var.yml
   tasks:
     - name: Access a variable
