--- a/02-vars.yml
+++ b/02-vars.yml
@@ -29,7 +29,13 @@
       vars: 
         URL: task.example.com       
  
-
+- name: Declare variable from inventory file
+  hosts: all
+  connection: local
+  tasks:
+    - name: Access a variable
+      ansible.builtin.debug:
+        msg: URL == {{URL}} 
 
   
 
