--- a/02-vars.yml
+++ b/02-vars.yml
@@ -37,5 +37,13 @@
       ansible.builtin.debug:
         msg: URL == {{URL}} 
 
+- name: Access a fact 
+  hosts: all
+  connection: local
+  tasks:
+    - name: Access a fact
+      ansible.builtin.debug:
+        msg: Ansible host name == {{ansible_fqdn}}         
+
   
 
