--- a/02-vars.yml
+++ b/02-vars.yml
@@ -44,6 +44,12 @@
     - name: Access a fact
       ansible.builtin.debug:
         msg: Ansible host name == {{ansible_fqdn}}         
+- name: Register a variable
+  hosts: all
+  connection: local
+  tasks:
+    - name: run a shell command
+      ansible.builtin.shell: uptime
 
   
 
